<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drake_ros_worms</name>
  <version>0.0.0</version>
  <description>Drake interface for WORMS project</description>
  <maintainer email="trejohst@mit.edu">trevor</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>drake_ros</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
